# homebrew-brewster

./: .gitignore  README.md  pyproject.toml
Formula/: brewster.rb
brewster/: cli.py  config.py  db.py  diff.py  installer.py  machine.py  sync.py
