[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brewster"
version = "0.1.0"
description = "Track and sync Homebrew packages across machines via iCloud or any shared filesystem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["homebrew", "brew", "packages", "sync", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
brewster = "brewster.cli:cli"

[project.urls]
Homepage = "https://github.com/shokk/homebrew-brewster"
Issues = "https://github.com/shokk/homebrew-brewster/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["brewster*"]

# ---------------------------------------------------------------------------
# Development tools
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
